--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=webapp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/job_skill_portal?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Danidu#678@mysql
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=./uploads
+
+openai.api.key=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
+
+cloudinary.cloud-name=dnxqj3ooq
+cloudinary.api-key=972737227888884
+cloudinary.api-secret=63h8oui5lAYeqYw9bM0G2sp-wuU
